a.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    primehub.io/phapplication: x-mlflow-5433d
  name: qrtt1-test-could-deleted
  namespace: hub
spec:
  containers:
  - image: qrtt1/debug-tools:v0.3
    command:
    - bash
    - -c
    - |
      echo "yo"
      python3 -mhttp.server 5000
    imagePullPolicy: IfNotPresent
    name: notebook
    ports:
    - containerPort: 5000
      protocol: TCP
    securityContext:
      runAsGroup: 0
      runAsUser: 0
